--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.main {
+  margin-top: 2rem;
+  text-align: left;
+}
